--- a/Orientacoes/Felipe/Reunioes.org
+++ b/Orientacoes/Felipe/Reunioes.org
@@ -182,3 +182,23 @@ Esse trabalho tem como objetivo estudar o *fenômeno da financeirização* para 
 * Reunião <2020-11-03 ter 17:00>
 
 Reunião com professor Mariano Laplane
+* Reunião <2020-11-19 qui>
+
+** Base de dados
+
+- Economática
+  Assaff
+** Comparação dos sistemas financeiros
+- Semelhanças com o sistema de financiamento continental europeu
+  + Crédito regulado com setor público e privado
+  + Menos mercado de capitais
+  + Financeirização a partir de outro ponto
+    - Migração de um sistema bancário para um sistema mais securitizado e isso reflete nos estudos microeconômicos indicados
+  + Multiplicação de espaços institucionais que permitem a diversidade de ativos
+  + Destacar as ponte entre crédito bancário, tipo de ativos e multiplicação do leque de transação de ativos financeiros associados ao fenêmeno da financeirização
+- Composição da riqueza com viés para ativos financeiros
+- Financeirização à brasileira
+  + Formas e composição da riqueiza financeira
+  + Papel da rolagem da dívida pública
+** Sugestão dos próximos passos
+- Discutir metodologia invés de revisão da literatura
