--- a/Writings/thesis.tex
+++ b/Writings/thesis.tex
@@ -1,4 +1,4 @@
-% Created 2020-09-27 dom 15:00
+% Created 2020-11-19 qui 19:29
 % Intended LaTeX compiler: pdflatex
 \documentclass[12pt,openright,oneside,a4paper,english,sumario=tradicional]{gpsabntex}
   \usepackage{lipsum}             % Pacote que gera texto dummy
@@ -153,7 +153,7 @@ Instituto de Economia
 \orientador{Lucas Azeredo da Silva Teixeira}
 \coorientador{Ivette Raymunda Luna Huamani}
 \newcommand{\ThesisTitle}{{Three Essays in Housing Macroeconomics}}
-\author{John Doe}
+\author{Gabriel Petrini}
 \date{2024}
 \title{}
 \begin{document}
@@ -287,7 +287,7 @@ Conclui-se que a taxa própria de juros dos imóveis explica a taxa de crescimen
 \thispagestyle{empty} % Removes page numbering from the first page
 
 \chapter{Capítulo QCA}
-\label{sec:orgf66981f}
+\label{sec:org721722c}
 
 \epigraph{The Fed, the European Central Bank and the Bank of Japan together set monetary policy for a zone that accounts for 80 per cent of the world’s
 industrialized economic activity ... Rarely, if ever, can so much power have been wielded by such a small number of institutions sitting outside the
@@ -295,12 +295,12 @@ direct democratic process.}{Goldman Sachs, 2000}
 
 
 \section{Introduction}
-\label{sec:org71eb4d2}
+\label{sec:orga6a95aa}
 
 \section{Methods}
-\label{sec:orged7bf31}
+\label{sec:org1de6758}
 
 \section{Conclusion}
-\label{sec:org5dde19c}
+\label{sec:orgbf59efb}
 \appendix
 \end{document}
